--- a/discovery-service/build.gradle
+++ b/discovery-service/build.gradle
@@ -4,6 +4,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 }
 
 dependencyManagement {
