--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -1,18 +1,11 @@
-spring:
-  application:
-    name: discovery-service
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mysql
-    username: root
-    password: SuperSecretPassword
-
 eureka:
   client:
     fetchRegistry: false
     registerWithEureka: false
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+
 server:
   port: 8761
+
+spring:
+  config:
+    import: optional:configserver:http://localhost:8071/
