--- a/config-service/src/main/resources/config/api-gateway.yml
+++ b/config-service/src/main/resources/config/api-gateway.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: discovery-service
+    name: api-gateway
   cloud:
     loadbalancer:
       ribbon:
@@ -10,8 +10,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-    fetchRegistry: false
-    registerWithEureka: false
   instance:
     preferIpAddress: true
+
 
