Added auth service

--- a/config-service/src/main/resources/config/api-gateway.yml
+++ b/config-service/src/main/resources/config/api-gateway.yml
@@ -5,6 +5,11 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
 eureka:
   client:
@@ -13,4 +18,9 @@ eureka:
   instance:
     preferIpAddress: true
 
+debug: true
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty.http.client: DEBUG
 
