--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
-
+ext {
+    set('springCloudVersion', "2022.0.4")
+    set('springBootVersion', "3.0.1")
+}
 
 allprojects {
     group = 'com.sombra.cmsapi'
@@ -26,7 +29,16 @@ allprojects {
 subprojects {
     apply plugin: 'org.springframework.boot'
 
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+        }
+    }
+
     dependencies {
+        compileOnly("org.projectlombok:lombok")
+        annotationProcessor("org.projectlombok:lombok")
         implementation 'mysql:mysql-connector-java:8.0.33'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
