--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ include 'discovery-service'
 include 'config-service'
 include 'api-gateway'
 include 'auth-service'
-include 'business-logic-service'
+include 'business-service'
