--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ subprojects {
         annotationProcessor("org.projectlombok:lombok")
         implementation 'mysql:mysql-connector-java:8.0.33'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     }
 
     tasks.named('test') {
