--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+    id 'com.diffplug.spotless' version '6.8.0'
 }
 
 ext {
@@ -28,6 +29,13 @@ allprojects {
 
 subprojects {
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'com.diffplug.spotless'
+
+    spotless {
+        java {
+            googleJavaFormat("1.18.1")
+        }
+    }
 
     dependencyManagement {
         imports {
