--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,3 +1,8 @@
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.sombra.cmsapi.apigateway.ApiGatewayApplication.java'
+    }
+}
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
