--- a/business-service/build.gradle
+++ b/business-service/build.gradle
@@ -1,3 +1,8 @@
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.sombra.cmsapi.businessservice.BusinessServiceApplication.java'
+    }
+}
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -8,6 +13,6 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-    implementation 'org.liquibase:liquibase-core'
+//    implementation 'org.liquibase:liquibase-core'
 }
 
