--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -1,3 +1,8 @@
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.sombra.cmsapi.configservice.ConfigServiceApplication.java'
+    }
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-config-server'
