--- a/discovery-service/build.gradle
+++ b/discovery-service/build.gradle
@@ -1,3 +1,8 @@
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.sombra.cmsapi.discoveryservice.DiscoveryServiceApplication.java'
+    }
+}
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
     implementation 'org.springframework.boot:spring-boot-starter-web'
