--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,66 @@ services:
     networks:
       - promo
 
+  config-service:
+    container_name: config-service
+    image: config-service
+    build:
+      context: ./config-service
+      dockerfile: Dockerfile
+    ports:
+      - "8071:8071"
+    depends_on:
+      - mysql
+
+  discovery-service:
+    container_name: discovery-service
+    image: discovery-service
+    build:
+      context: ./discovery-service
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"
+    depends_on:
+      - mysql
+      - config-service
+
+  api-gateway:
+    container_name: api-gateway
+    image: api-gateway
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    ports:
+      - "8765:8765"
+    depends_on:
+      - mysql
+      - discovery-service
+
+  business-service:
+    container_name: business-service
+    image: business-service
+    build:
+      context: ./business-service
+      dockerfile: Dockerfile
+    ports:
+      - "8764:8764"
+    depends_on:
+      - mysql
+      - discovery-service
+
+  auth-service:
+    container_name: auth-service
+    image: auth-service
+    build:
+      context: ./auth-service
+      dockerfile: Dockerfile
+    ports:
+      - "8763:8763"
+    depends_on:
+      - mysql
+      - discovery-service
+      - business-service
+
 
 networks:
   promo:
