--- a/business-service/build.gradle
+++ b/business-service/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.1'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'com.amazonaws:aws-java-sdk:1.12.636'
+    implementation 'commons-io:commons-io:2.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 //    implementation 'org.liquibase:liquibase-core'
