--- a/business-service/build.gradle
+++ b/business-service/build.gradle
@@ -16,6 +16,6 @@ dependencies {
     implementation 'commons-io:commons-io:2.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-//    implementation 'org.liquibase:liquibase-core'
+    implementation 'org.liquibase:liquibase-core'
 }
 
