--- a/config-service/src/main/resources/config/business-service.yml
+++ b/config-service/src/main/resources/config/business-service.yml
@@ -10,12 +10,12 @@ spring:
     username: root
     password: SuperSecretPassword
     driver-class-name: com.mysql.cj.jdbc.Driver
-#  liquibase:
-#    enabled: false
-#    change-log: classpath:db/changelog/db.changelog-master.xml
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.xml
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
