--- a/build.gradle
+++ b/build.gradle
@@ -50,12 +50,16 @@ subprojects {
         compileOnly("org.projectlombok:lombok")
         annotationProcessor("org.projectlombok:lombok")
         implementation 'mysql:mysql-connector-java:8.0.33'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+                    exclude group: 'org.mockito', module: 'mockito-core'
+        }
+        testImplementation 'org.mockito:mockito-inline:4.6.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
         implementation 'org.mapstruct:mapstruct:1.5.5.Final'
         annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     }
 
-    tasks.named('test') {
+    test {
         useJUnitPlatform()
     }
 }
