--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,12 @@ subprojects {
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
                     exclude group: 'org.mockito', module: 'mockito-core'
         }
+        testImplementation 'org.testcontainers:testcontainers:1.19.3'
+        testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
+        testImplementation 'org.testcontainers:mysql:1.19.3'
         testImplementation 'org.mockito:mockito-inline:4.6.1'
+        testImplementation 'org.springframework.security:spring-security-test:6.2.1'
+        testImplementation 'com.github.database-rider:rider-junit5:1.41.0'
         testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
         implementation 'org.mapstruct:mapstruct:1.5.5.Final'
         annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
