--- a/business-service/src/main/resources/application.yml
+++ b/business-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: business-service
   config:
-    import: optional:configserver:http://localhost:8071/
+    import: configserver:http://config-service:8071/
 
 server:
   port: 8764
