--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   mysql:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD:  ${SuperSecretPassword}
+      MYSQL_ROOT_PASSWORD:  ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER:  ${MYSQL_USER}
-      MYSQL_PASSWORD:  ${SecretPassword}
+      MYSQL_PASSWORD:  ${MYSQL_PASSWORD}
     env_file:
       - .env
     ports:
